fix cta buttons on mobile devices

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -256,3 +256,9 @@ a#video
 
 a#video:hover
   background #3D799D
+
+@media (max-width: 800px)
+  a#video,
+  a#get-started
+    font-size 1.2rem
+    padding 8px 10px 8px 10px
